[project]
name = "pasarguard"
version = "2.1.0"
description = "A modern async Python client for the Pasarguard API with typed models and full admin automation support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
dependencies = [
    "datetime>=5.5",
    "httpx>=0.28.1",
    "paramiko>=4.0.0",
    "pydantic>=2.4.1,<2.13",
    "sshtunnel>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pasarguard"]