[project]
name = "pasarguard"
version = "2.1.0"
description = "A modern async Python client for the Pasarguard API with typed models and full admin automation support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["pasarguard", "api", "async", "httpx", "pydantic"]
dependencies = [
    "datetime>=5.5",
    "httpx>=0.28.1",
    "paramiko>=4.0.0",
    "pydantic>=2.4.1,<2.14",
    "sshtunnel>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/AmirKenzo/pasarguard_api"
Repository = "https://github.com/AmirKenzo/pasarguard_api"
Documentation = "https://github.com/AmirKenzo/pasarguard_api#readme"
Issues = "https://github.com/AmirKenzo/pasarguard_api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pasarguard"]
